Update of Japanese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5956 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/NEWS
+++ b/NEWS
@@ -109,7 +109,7 @@ Geany 0.21 (unreleased)
 
     Internationalisation:
     * Add translations: fa
-    * Update translations:
+    * Update translations: ja
 
 
 Geany 0.20 (January 5, 2011)
