Fix not indenting snippet contents for documents with non-\n line endings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5959 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/editor.c:
    Fix not converting \n to document line endings in snippets.
+ * src/editor.c:
+   Fix not indenting snippet contents for documents with non-\n line 
+   endings.
 
 
 2011-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
