--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fr.po: Update of French translation. Thanks to Jean-Philippe Moal for
+          providing.
+
+
 2011-09-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ja.po: Update of Japanese translation. Thanks to Masami Chikahiro.
