--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * ca.po: Update of Catalan translation. Thanks to Toni Garcia-Navarro.
+
+
 2011-09-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fr.po: Update of French translation. Thanks to Jean-Philippe Moal for
