Update of Czech translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5963 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/NEWS
+++ b/NEWS
@@ -109,8 +109,8 @@ Geany 0.21 (unreleased)
 
     Internationalisation:
     * Add translations: fa
-    * Update translations: de, en_GB, es, fr, gl, it, ja, nl, pt, pt_BR,
-      sl, sv, tr, vi, zh_CN, zh_TW
+    * Update translations: ca, cs, de, en_GB, es, fr, gl, it, ja, nl, pt,
+      pt_BR, sl, sv, tr, vi, zh_CN, zh_TW
 
 
 Geany 0.20 (January 5, 2011)
