--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * cs.po: Update of Czech translation. Thanks to Karel Kolman for
+   providing.
+
+
 2011-09-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ca.po: Update of Catalan translation. Thanks to Toni Garcia-Navarro.
