--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
+
+
 2011-09-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * cs.po: Update of Czech translation. Thanks to Karel Kolman for
