Update of Italian translation.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5968 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,8 @@
 2011-09-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
+ * it.po: Update of Italian translation. Thanks to Giuliano Manzitti
+          for providing the update.
 
 
 2011-09-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
