--- a/NEWS
+++ b/NEWS
@@ -109,7 +109,7 @@ Geany 0.21 (unreleased)
 
     Internationalisation:
     * Add translations: fa
-    * Update translations: ca, cs, de, en_GB, es, fr, gl, it, ja, nl, pt,
+    * Update translations: ca, cs, de, en_GB, es, fi, fr, gl, it, ja, nl, pt,
       pt_BR, sl, sv, tr, vi, zh_CN, zh_TW
 
 
