--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-10-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * doc/images/*.png:
+   Update documentation images.
+
+
 2011-09-28  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/utils.c:
@@ -9,7 +15,7 @@
  * src/editor.c:
    Fix not converting \n to document line endings in snippets.
  * src/editor.c:
-   Fix not indenting snippet contents for documents with non-\n line 
+   Fix not indenting snippet contents for documents with non-\n line
    endings.
 
 
