Update documentation for new images.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5978 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * doc/images/*.png:
    Update documentation images.
+ * doc/geany.txt, doc/geany.html:
+   Update documentation for new images.
 
 
 2011-09-28  Colomban Wendling  <colomban(at)geany(dot)org>
