Update of the French translation for new strings from src/stash.c
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5980 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-10-01  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * fr.po: Update of French translation.
+
+
 2011-09-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
