Update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5981 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-10-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Update of German translation.
+
+
 2011-10-01  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * fr.po: Update of French translation.
