--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
  * doc/geany.txt, doc/geany.html:
    Add myself as an author.
+ * New release: Geany 0.21 "Gromia".
 
 
 2011-10-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
