Post-release version bump
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5989 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/TODO
+++ b/TODO
@@ -27,9 +27,9 @@ Note: features included in brackets have lower priority.
 	   workspace-sockets branch)
 
 
-	1.0:
-	o stable plugin ABI for the 1.0 series? (Split up geany_data, prefs,
-	  GeanyKeyCommand enum into groups)
+	Someday:
+	o stable plugin ABI? (Split up geany_data, prefs, GeanyKeyCommand
+	  enum into groups)
 	o review documentation
 
 
