--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-10-03  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * TODO, configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
+   src/geany.h, win32-config.h, wscript:
+   Post-release version bump.
+
+
 2011-10-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * Merge branches/unstable:
