Update from CTags SVN jscript.c.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5995 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-10-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * tagmanager/js.c:
+   Update from CTags SVN jscript.c.
+
+
 2011-10-03  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * TODO, configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
