Use <geanyplugin.h> not "geanyplugin.h" in the howto.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5999 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -184,7 +184,7 @@
  *
  *  Let's start with the very basic headers and add more later if necessary.
  *  @code
-#include "geanyplugin.h"
+#include <geanyplugin.h>
  *  @endcode
  *
  *  @a geanyplugin.h includes all of the Geany API and also the necessary GTK header files,
@@ -343,7 +343,7 @@ void plugin_cleanup(void)
  *  @section listing Complete listing (without comments)
  *
  *  @code
-#include "geanyplugin.h"
+#include <geanyplugin.h>
 
 GeanyPlugin		*geany_plugin;
 GeanyData		*geany_data;
