Modernize configure.ac a bit
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@6000 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-10-06  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * autogen.sh, configure.ac:
+   Modernize configure.ac a bit.
+
+
 2011-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * tagmanager/lregex.c, tagmanager/php.c:
