--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * doc/Makefile.am, doc/makefile.win32:
+   Add doc/makefile.win32 for docs generation.
+
+
 2011-10-06  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * autogen.sh, configure.ac:
