Update of Swedish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@6014 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,13 @@
+2011-10-06  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * sv.po: Update of Swedish translation
+
+
+2011-10-02  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * Release of Geany 0.21
+
+
 2011-10-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Update of German translation.
