Update of Polish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-10-31  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * pl.po: Update of Polish translation. Thanks to Wojciech świderski.
+
+
 2011-10-06  Frank Lanitz  <frlan@frank.uvena.de>
 
  * sv.po: Update of Swedish translation
