Adding Wojciech Świderski to list of Polish translators

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2011-10-30  Frank Lanitz  <frlan@frank.uvena.de>
 
- * pl.po: Update of Polish translation. Thanks to Wojciech świderski.
+ * pl.po: Update of Polish translation. Thanks to Wojciech Świderski.
 
 
 2011-10-06  Frank Lanitz  <frlan@frank.uvena.de>
