--- a/HACKING
+++ b/HACKING
@@ -164,6 +164,8 @@ Coding
   them down into smaller static functions where possible. This makes code
   much easier to read and maintain.
 * Use GLib types and functions - gint not int, g_free() not free().
+* Do not use G_LIKELY or G_UNLIKELY (except in critical loops). These
+  add noise to the code with little real benefit.
 * Your code should build against GLib 2.20 and GTK 2.16. At least for the
   moment, we want to keep the minimum requirement for GTK at 2.16 (of
   course, you can use the GTK_CHECK_VERSION macro to protect code using
