--- a/THANKS
+++ b/THANKS
@@ -126,6 +126,7 @@ Chikahiro Masami <cmasa(dot)z321(at)gmail(dot)com> - ja
 Park Jang-heon <dotkabi(at)gmail(dot)com> - ko
 Baurzhan Muftakhidinov <baurthefirst(at)gmail(dot)com> - kk
 Laurent Hoeltgen <hoeltgman(at)gmail(dot)com> - lb
+tsetsee <tsetsee(dot)yugi(at)gmail(dot)com> - mn
 Kurt De Bree <kdebree(at)telenet(dot)be> - nl
 Peter Scholtens <<peter(dot)scholtens(at)xs4all(dot)nl> - nl
 Ayke van Laethem <aykevanlaethem(at)gmail(dot)com> - nl
