--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-11-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * mn.po: Added Mongolian translation. Thanks to Цэцэнцэнгэл.
+
+
 2011-10-30  Frank Lanitz  <frlan@frank.uvena.de>
 
  * pl.po: Update of Polish translation. Thanks to Wojciech Świderski.
