Add Matthew Brush as developer

--- a/README
+++ b/README
@@ -102,8 +102,9 @@ file.
 
 
 --
-2005-2011 by Enrico Tröger, Nick Treleaven, Colomban Wendling and Frank Lanitz
+2005-2011 by Enrico Tröger, Nick Treleaven, Colomban Wendling, Matthew Brush and Frank Lanitz
 enrico(dot)troeger(at)uvena(dot)de
 nick(dot)treleaven(at)btinternet(dot)com
 lists(dot)ban(at)herbesfolles(dot)org
+mbrush(at)codebrainz(dot)ca
 frank(at)frank(dot)uvena(dot)de
