Update of Swedish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-12-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sv.po: Update of Swedish translation. Thanks to Tony Mattsson for
+          providing the update.
+
+
 2011-11-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * mn.po: Added Mongolian translation. Thanks to Цэцэнцэнгэл.
