--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-26  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * id.po: Added Indonesian translation, provided by Fajar Wahyu. 
+
+
 2011-12-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sv.po: Update of Swedish translation. Thanks to Tony Mattsson for
