Update of Traditional Chinese translation provided by Matthew Lien.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2012-02-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * zh_TW.po: Update of Traditional Chinese translation provided by Matthew Lien.
+
+
 2012-01-26  Frank Lanitz  <frlan@frank.uvena.de>
 
- * id.po: Added Indonesian translation, provided by Fajar Wahyu. 
+ * id.po: Added Indonesian translation, provided by Fajar Wahyu.
 
 
 2011-12-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
