Update of Kazakh translation. Thanks to Baurzhan Muftakhidinov

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-02-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * kk.po: Update of Kazakh translation provided by Baurzhan Muftakhidinov.
+
+
 2012-02-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * zh_TW.po: Update of Traditional Chinese translation provided by Matthew Lien.
