Update of German translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-02-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Update of German translation.
+
+
 2012-02-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * kk.po: Update of Kazakh translation provided by Baurzhan Muftakhidinov.
