--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-05  Frank Lanitz  <frank@frank.uvena.de>
+
+ * de.po: Update of German translation.
+
+
 2012-02-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Update of German translation.
