Added Arabian translation

--- a/THANKS
+++ b/THANKS
@@ -94,6 +94,7 @@ Translators:
 ------------
 These people have translated Geany to foreign languages:
 
+Fayssal Chamekh <chamfay(at)gmail(dot)com - ar
 Marcos Costales <marcoscostales(at)gmail(dot)com - ast
 Yura Siamashka <yurand2(at)gmail(dot)com> - be_BY
 Dilyan Rusev <dilyanrusev(at)gmail(dot)com> - bg
