Added Lithuanian translation

--- a/THANKS
+++ b/THANKS
@@ -127,6 +127,7 @@ Chikahiro Masami <cmasa(dot)z321(at)gmail(dot)com> - ja
 Park Jang-heon <dotkabi(at)gmail(dot)com> - ko
 Baurzhan Muftakhidinov <baurthefirst(at)gmail(dot)com> - kk
 Laurent Hoeltgen <hoeltgman(at)gmail(dot)com> - lb
+Algimantas Margevičius <margevicius(dot)algimantas(at)gmail(dot)com - lt
 tsetsee <tsetsee(dot)yugi(at)gmail(dot)com> - mn
 Kurt De Bree <kdebree(at)telenet(dot)be> - nl
 Peter Scholtens <<peter(dot)scholtens(at)xs4all(dot)nl> - nl
