--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * lt.po: Add Lithuanian translation by Algimantas Margevičius.
+
+
 2012-03-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ar.po: Added Arabian translation by Fayssal Chamekh.
