Update of Lithuanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * lt.po: Update Lithuanian translation by Algimantas Margevičius.
+
+
 2012-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * lt.po: Add Lithuanian translation by Algimantas Margevičius.
