Update of Hungarian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2012-03-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
+ * hu.po: Update of Hungarian translation. Thanks to Gabor Kmetyko.
  * lt.po: Update Lithuanian translation by Algimantas Margevičius.
 
 
