Find in files: split extra options like a shell would do
Don't simply split the the extra options string on spaces to build the
grep argument list but rather split it in a shell-style fashion.

This is probably more intuitive for most users, is more consistent with
e.g. custom commands, and allows for spaces in an option or its
argument.

Closes #3516263.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@ Geany 1.22 (unreleased)
     Editor
     * Update Scintilla to version 2.29.
 
+    Search
+    * Extra options passed to grep through Find in Files now follows a
+      real shell-style syntax (#3516263).
+
 
 Geany 0.21 (October 2, 2011)
 
