Added Tomáš Vadina as Slovakian translator

--- a/THANKS
+++ b/THANKS
@@ -145,6 +145,7 @@ Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru_RU
 stat.c <Static-Const(at)yandex(dot)ru> - ru_RU
 Andrew Drynov <adryno(at)gmail(dot)com> - ru_RU
 John Wehin <john(dot)wehin(at)gmail(dot)com> - ru_RU
+Tomáš Vadina <kyberdev(at)gmail(dot)com> - sk
 Jože Klepec <joze(dot)klepec(at)siol(dot)net> - sl
 Tony Mattsson <superxorn(at)gmail(dot)com> - sv
 Gürkan Gür <seqizz(at)gmail(dot)com - tr
